# minibots

./: ASSEMBLING.md  README.md
01_3DModels/: 01_Minibot.FCStd  02_MinibotShell.FCStd  04_CameraTripod.FCStd  05_CameraSupport.FCStd  README.md
01_3DModels/imgs/: tags_6x5_expand_w2946.xcf  tags_6x5_expand_w2946_1_30.xcf
01_3DModels/stl/: 01_Chassis.stl  02_Wheel.stl  03_FrontWheel.stl  04_PCBCoverBig.stl  05_PCBCoverNormal.stl  21_MinibotShell.stl  31_Tyre.stl  32_TyreModePartA.stl  33_TyreModldPartB.stl  41_TripodSupport.stl  51_RaspCamSupport.stl  52_RaspCamSupportFixer.stl
02_BotPCB/: Minibots-cache.lib  Minibots-rescue.lib  Minibots.kicad_pcb  Minibots.net  Minibots.pro  Minibots.sch  Minibots_bom.csv  README.md  minibots.lib  v2_1.kicad_pcb
02_BotPCB/Gerberfiles/: Minibots-Edge.Cuts.gm1  Minibots-F.Cu.gtl  Minibots-F.Mask.gts  Minibots-F.SilkS.gto  Minibots-drl_map.ps  Minibots.drl
02_BotPCB/minibots.pretty/: ESP8266-04.kicad_mod  MPU6050.kicad_mod  MiniSlideSwitch.kicad_mod
03_BotFirmware/: README.md
03_BotFirmware/Container/: Dockerfile  nodemcu_firmware.patch
03_BotFirmware/lua/: config.lua  init.lua  main.lua
03_BotFirmware/lua/LFS/: class.lua  minibot.lua  mpu6050.lua  mpu6050_config.lua  mpu6050_memorybank0.lua  mpu6050_memorybank1.lua  mpu6050_memorybank2.lua  mpu6050_memorybank3.lua  mpu6050_memorybank4.lua  mpu6050_memorybank5.lua  mpu6050_memorybank6.lua  mpu6050_memorybank7.lua  mpu6050_updates.lua  quaternion.lua  server.lua  vector.lua  wificontroller.lua
04_Examples/01_SmartCity/: README.md
04_Examples/01_SmartCity/Backend/: CMakeLists.txt  README.md
04_Examples/01_SmartCity/Backend/assets/: config.yaml  export_v4l2.sh  import_v4l2.sh
04_Examples/01_SmartCity/Backend/assets/bot_config/: bot_1.yaml  bot_12.yaml  bot_2.yaml  bot_3.yaml  bot_4.yaml  bot_5.yaml  bot_7.yaml
04_Examples/01_SmartCity/Backend/include/: analytics.hpp  config.hpp  logger.hpp  map.hpp  server.hpp  trackBuilder.hpp  tracker.hpp
04_Examples/01_SmartCity/Backend/src/: map.cc  minibots.cc  server.cc  trackBuilder.cc  tracker.cc
04_Examples/01_SmartCity/BotSimulator/: main.py  sim_visualizer.py
04_Examples/01_SmartCity/BotSimulator/assets/: car.xcf
04_Examples/01_SmartCity/BotSimulator/minibots/: __init__.py  bot.py  manualtarget.py  (+3 more)
04_Examples/01_SmartCity/Container/: Dockerfile
04_Examples/01_SmartCity/TrafficLight/: flash32.sh
(+8 files in other folders)
